--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                 </div>
               </div>
 
-              <button type="submit" class="btn btn-primary bn-5">Kirim</button>
+              <button type="submit" class="btn btn-success bn-5">Kirim</button>
             </form>
           </div>
         </div>
