--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             <div class="card">
               <img src="img/projects/1.jpg" class="card-img-top" alt="project1" />
               <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text">rumah minimalis modern terdiri dari 3 lantai dengan fungsional tata ruang yang lengkap.</p>
               </div>
             </div>
           </div>
@@ -114,7 +114,7 @@
             <div class="card">
               <img src="img/projects/2.jpg" class="card-img-top" alt="project2" />
               <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text">rumah minimalis bangunan 2 lantai.</p>
               </div>
             </div>
           </div>
@@ -122,7 +122,7 @@
             <div class="card">
               <img src="img/projects/3.jpg" class="card-img-top" alt="project3" />
               <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text">rumah minimalis.</p>
               </div>
             </div>
           </div>
@@ -130,7 +130,7 @@
             <div class="card">
               <img src="img/projects/4.jpg" class="card-img-top" alt="project4" />
               <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text">rumah minimalis .</p>
               </div>
             </div>
           </div>
@@ -138,7 +138,7 @@
             <div class="card">
               <img src="img/projects/5.jpg" class="card-img-top" alt="project5" />
               <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text">rumah minimalist.</p>
               </div>
             </div>
           </div>
@@ -146,7 +146,7 @@
             <div class="card">
               <img src="img/projects/6.jpg" class="card-img-top" alt="project6" />
               <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text">rumah minimalis.</p>
               </div>
             </div>
           </div>
@@ -206,7 +206,10 @@
 
     <!-- footer -->
     <footer class="bg-primary text-white text-center pb-5">
-      <p>Segala sesuatu adalah milik alloh - <i class="bi bi-suit-heart-fill text-danger"></i> hanya bisa berusaha <a href="https://www.instagram.com/ndasapta/" class="text-white fw-bold">Ganda sapta N</a></p>
+      <p>
+        Segala sesuatu adalah milik alloh - <i class="bi bi-suit-heart-fill text-danger"></i> manusia hanya bisa berusaha dan berdoa, jangan pernah menyerah
+        <a href="https://www.instagram.com/ndasapta/" class="text-white fw-bold">Ganda sapta N</a>
+      </p>
     </footer>
 
     <!-- akhir footer -->
